<resources>
    <string-array name="menu_array">
        <item>酒来了</item>
        <item>我的钱包</item>
        <item>积分商城</item>
        <item>我的订单</item>
        <item>消息中心</item>
    </string-array>
    <string name="exit">再按一次退出程序</string>
    <string name="app_name">酒来了</string>
    <string name="action_settings">Settings</string>
    <string name="action_personal">个人中心</string>
    <string name="hello_world">Hello world!</string>
    <string name="msg">消息</string>
    <string name="company">南京壹前零后科技有限公司</string>
    <string name="copyright">版权所有</string>
    <string name="agreement_title">服务协议</string>
    <string name="agreement_content">【首部及导言】               \n 欢迎您使用酒来了软件及服务！
\n为使用酒来了软件（以下统称“本软件”）及服务，您应当阅读并遵守《酒来了软件许可及服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，并选择接受或不接受。
\n除非您已阅读并接受本协议所有条款，否则您无权下载、安装或使用本软件及相关服务。您的下载、安装、使用、登录等行为即视为您已阅读并同意本协议的约束。
\n如果您未满18周岁，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。

\n一、【协议的范围】
\n1.1【协议适用主体范围】
\n本协议是您与南京壹前零后科技有限公司之间关于您下载、安装、使用、登录本软件，以及使用本服务所订立的协议。

\n1.2【协议关系及冲突条款】
本协议的内容，包括但不限于以下与本服务、本协议相关的协议、规则、规范以及南京壹前零后科技有限公司可能不断发布的关于本服务的相关协议、规则、规范等内容，前述内容一经正式发布，即为本协议不可分割的组成部分，与其构成统一整体，您同样应当遵守：
本协议与上述内容存在冲突的，以本协议为准。

\n二、【关于本服务】
\n2.1【本服务内容】
\n本服务内容是指南京壹前零后科技有限公司通过本软件向用户提供的相关服务（简称“本服务”）。

\n2.2【本服务形式】
\n您可能可以通过电脑、手机等终端以客户端、网页等形式使用本服务，具体以南京壹前零后科技有限公司提供的为准，同时，南京壹前零后科技有限公司会不断丰富您使用本服务的终端、形式等。当您使用本服务时，您应选择与您的终端、系统等相匹配的本软件版本，否则，您可能无法正常使用本服务。

\n2.3【许可的范围】
\n2.3.1 南京壹前零后科技有限公司给予您一项个人的、不可转让及非排他性的许可，以使用本软件。您可以为非商业目的在单一台终端设备上下载、安装、使用、登录本软件。

\n2.3.2 本条及本协议其他条款未明示授权的其他一切权利仍由南京壹前零后科技有限公司保留，您在行使这些权利时须另外取得南京壹前零后科技有限公司的书面许可。南京壹前零后科技有限公司如果未行使前述任何权利，并不构成对该权利的放弃。

\n三、【软件的获取】
\n3.1 您可以直接从南京壹前零后科技有限公司的网站上获取本软件，也可以从得到南京壹前零后科技有限公司授权的第三方获取。

\n3.2 如果您从未经南京壹前零后科技有限公司授权的第三方获取本软件或与本软件名称相同的安装程序，南京壹前零后科技有限公司无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。

\n四、【软件的安装与卸载】
\n4.1 南京壹前零后科技有限公司可能为不同的终端、系统等开发了不同的软件版本，您应当根据实际情况选择下载合适的版本进行安装。

\n4.2 下载安装程序后，您需要按照该程序提示的步骤正确安装。

\n4.3 为提供更加优质、安全的服务，在本软件安装时南京壹前零后科技有限公司可能推荐您安装其他软件，您可以选择安装或不安装。

\n4.4 如果您不再需要使用本软件或者需要安装新版软件，可以自行卸载。如果您愿意帮助南京壹前零后科技有限公司改进产品服务，请告知卸载的原因。

\n五、【软件的更新】
\n5.1 为了增进用户体验、完善服务内容，南京壹前零后科技有限公司将不断努力开发新的服务，并为您不时提供软件更新（这些更新可能会采取软件替换、修改、功能强化、版本升级等形式）。

\n5.2 本软件可能为您默认开启自动升级、更新等功能，您可以在软件设置中自行选择是否需要开启此功能。

\n5.3 为了改善用户体验，并保证服务的安全性和功能的一致性，南京壹前零后科技有限公司有权不经向您特别通知而对软件进行更新，或者对软件的部分功能效果进行改变或限制。

\n5.4 本软件新版本发布后，旧版本的软件可能无法使用。南京壹前零后科技有限公司不保证旧版本软件继续可用及相应的客户服务，请您随时核对并下载最新版本。

\n六、【用户行为规范】
\n6.1 【用户注意事项】
\n6.1.1 您充分理解并同意：为了向您提供更好的网络社交服务，本服务的某些功能可能会让第三方知晓您的某些信息，本服务的某些功能可能会获取并展示您的设备、网络状态等。您应了解本部分的信息公开和透露可能会给您带来潜在风险，并自行承担由此造成的风险。

\n6.1.2 您充分理解并同意：为向您提供更好的用户体验和提高服务质量，进行关系拓展。

\n6.1.3 您充分理解并同意：为改善、优化相应服务，南京壹前零后科技有限公司可能会对您的手机登录号以及在本软件中的相关操作信息等信息进行使用，也可能通过南京壹前零后科技有限公司服务或南京壹前零后科技有限公司服务中的第三方提供的服务向您本人、其他用户展示您的相关信息。南京壹前零后科技有限公司也可能会基于保护您的账号安全等安全因素，收集、使用您的相关操作行为等信息。

\n6.1.4 您充分理解并同意：您在使用本服务某一特定服务时，本服务可以使用您终端设备的相关权限、接口及相关信息等以实现相应的功能，某些特定服务可能还需同意单独的协议、规则等，您在使用该项服务前请仔细阅读前述相关协议、规则。

\n6.1.5 南京壹前零后科技有限公司有权在本服务中或通过本服务向您展现各种信息，包括但不限于广告信息、新闻信息及宣传信息等，该信息可能以系统消息或弹出窗口等形式出现。

\n6.1.6 您可以选择不向南京壹前零后科技有限公司提供您的某些信息，或者根据产品设置取消南京壹前零后科技有限公司收集某些信息，但因此可能会导致相关服务功能无法实现。

\n6.1.7 您理解并同意：南京壹前零后科技有限公司将会尽其商业上的合理努力保障您在本软件及服务中的数据存储安全，但是，南京壹前零后科技有限公司并不能就此提供完全保证，包括但不限于以下情形：

\n（1）南京壹前零后科技有限公司不对您在本软件及服务中相关数据的删除或储存失败负责；

\n（2）南京壹前零后科技有限公司有权根据实际情况自行决定您在本软件及服务中数据的最长储存期限、服务器中数据的最大存储空间等，您可根据自己的需要自行备份本软件及服务中的相关数据。双方另有约定的按相应约定执行；

\n（3）如果您停止使用本软件及服务或服务被终止或取消，南京壹前零后科技有限公司可以从服务器上永久地删除您的数据。您的服务停止、终止或取消后，南京壹前零后科技有限公司没有义务向您返还任何数据。

\n6.1.8本软件内的运营活动均由南京壹前零后科技有限公司或第三方举办，除有特别声明外，活动中提供的奖品生产商（如奖品为苹果手机的苹果公司，下同）等均未参与本软件内的运营活动，活动中涉及到的积分商品，也均由南京壹前零后科技有限公司或第三方自行购买。因运营活动产生纠纷的，由南京壹前零后科技有限公司或第三方在法律规定的范围内承担责任，与奖品生产商无关。因活动奖品质量产生纠纷的,按照相关法律规定处理。

\n6.1.9您使用本服务时，本服务的内容可能会因您使用软件版本的不同而有差别，您理解并同意：

\n6.2 【五不准】
\n您在使用本服务时不得利用本服务从事以下行为，包括但不限于：

\n（1）发布、传送、传播、储存违反法律、危害国家安全统一、社会稳定、公序良俗、社会公德以及侮辱、诽谤、淫秽、暴力的内容；

\n（2）发布、传送、传播、储存侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的内容；

\n（3）虚构事实、隐瞒真相以误导、欺骗他人；

\n（4）发表、传送、传播广告信息及垃圾信息；

\n（5）从事其他违反法律法规、政策及公序良俗、社会公德等的行为。

\n6.3 【用户禁止行为】
\n除非法律允许或南京壹前零后科技有限公司书面许可，您不得从事下列行为：

\n（1）删除本软件及其副本上关于著作权的信息；

\n（2）对本软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现本软件的源代码；

\n（3）对南京壹前零后科技有限公司拥有知识产权的内容进行使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等；

\n（4）对本软件或者本软件运行过程中释放到任何终端内存中的数据、软件运行过程中客户端与服务器端的交互数据，以及本软件运行所必需的系统数据，进行复制、修改、增加、删除、挂接运行或创作任何衍生作品，形式包括但不限于使用插件、外挂或非南京壹前零后科技有限公司经授权的第三方工具/服务接入本软件和相关系统；

\n（5）通过修改或伪造软件运行中的指令、数据，增加、删减、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否为商业目的；

\n（6）通过非南京壹前零后科技有限公司开发、授权的第三方软件、插件、外挂、系统，登录或使用南京壹前零后科技有限公司软件及服务，或制作、发布、传播上述工具；

\n（7）自行、授权他人或利用第三方软件对本软件及其组件、模块、数据等进行干扰；

\n（8）其他未经南京壹前零后科技有限公司明示授权、许可或违反本协议及相关协议、规则的行为。

\n6.4 【对自己行为负责】
\n您充分了解并同意，您必须为自己注册帐号下的一切行为负责，包括您所发表的任何内容以及由此产生的任何后果。您应对使用本服务时接触到的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。南京壹前零后科技有限公司无法且不会对您因前述风险而导致的任何损失或损害承担责任。

\n七、【第三方提供的产品或服务】
\n您在南京壹前零后科技有限公司平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。南京壹前零后科技有限公司和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。

\n因用户使用本软件或要求南京壹前零后科技有限公司提供特定服务时，本软件可能会调用第三方系统或者通过第三方支持用户的使用或访问，使用或访问的结果由该第三方提供（包括但不限于您通过本服务跳转到的第三方提供的服务及内容，第三方通过南京壹前零后科技有限公司开放平台接入的服务及内容等），南京壹前零后科技有限公司无法保证第三方提供服务及内容的安全性、准确性、有效性及其他不确定的风险，您应自行承担相关责任。

\n八、【知识产权声明】
\n8.1 南京壹前零后科技有限公司是本软件的知识产权权利人。本软件的著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规和相应的国际条约保护，南京壹前零后科技有限公司依法享有上述相关知识产权，但相关权利人依照法律规定应享有的权利除外。

\n8.2 未经南京壹前零后科技有限公司或相关权利人书面同意，您不得为任何商业或非商业目的自行或许可任何第三方实施、利用、转让上述知识产权。

\n九、【终端安全责任】
\n9.1 您理解并同意，本软件或本服务同大多数互联网软件、服务一样，可能会受多种因素影响（包括但不限于用户原因、网络服务质量、社会环境等）；也可能会受各种安全问题的侵扰（包括但不限于他人非法利用用户资料，进行现实中的骚扰；用户下载安装的其他软件或访问的其他网站中可能含有病毒、木马程序或其他恶意程序，威胁您终端的信息和数据的安全，继而影响本软件、本服务的正常使用等）。因此，您应加强信息安全及个人信息的保护意识，注意密码保护，以免遭受损失。

\n9.2 维护软件安全与正常使用是南京壹前零后科技有限公司和您的共同责任，南京壹前零后科技有限公司将按照行业标准合理审慎地采取必要技术措施保护您的终端信息和数据安全，但是您承认和同意南京壹前零后科技有限公司不能就此提供任何保证。

\n9.3 在任何情况下，您不应轻信借款、索要密码或其他涉及财产的网络信息。涉及财产操作的，请一定先核实对方身份，并请经常留意南京壹前零后科技有限公司有关防范诈骗犯罪的提示。


\n十、【其他】
\n10.1 您使用本软件或本服务即视为您已阅读并同意受本协议的约束。南京壹前零后科技有限公司有权在必要时修改本协议条款。您可以在本软件、本服务的最新版本中查阅相关协议条款。本协议条款变更后，如果您继续使用本软件、本服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用本软件。

\n10.2 本协议签订地为中华人民共和国江苏省南京市。

\n10.3 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。

\n10.4 若您和南京壹前零后科技有限公司之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。

\n10.5 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。

\n10.6 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。

\n10.7 若本协议有中文、英文等多个语言版本，相应内容不一致的，均以中文版的内容为准。（完）

\n南京壹前零后科技有限公司</string>
    <string name="home_page">首页</string>
    <string name="shopping_cart">购物车</string>
    <string name="more">更多</string>
    <string name="my">我的</string>
    <string name="search">搜索 </string>
    <string name="search_hint"> 请输入商品名称</string>
    <string name="search_no"> 没有搜索到相关产品，请换关键词查询！</string>
    <string name="search_thing">请输入您想要的物品名称</string>
    <string name="order_search">订单查询</string>
    <string name="select_all">全选</string>
    <string name="settlement">结算</string>
    <string name="integral_exchange">积分兑换</string>
    <string name="integral_exchange_history">积分兑换历史</string>
    <string name="exchange_history">兑换历史</string>
    <string name="exchange_history_query">兑换历史查询</string>
    <string name="integral_search">积分查询</string>
    <string name="integral_shop">积分商城</string>
    <string name="special_events">活动专区</string>
    <string name="kf_phone">客服电话</string>
    <string name="my_msg">我的消息</string>
    <string name="name">姓名</string>
    <string name="notify">消息</string>
    <string name="order_suc">订单成功</string>
    <string name="no_data">没有找到符合条件的物品</string>
    <string name="hot_recommed">热门推荐</string>
    <string name="pre_pay_type">预支付</string>
    <string name="total_price">总金额：</string>
    <string name="to_settlement">去结算</string>
    <string name="add_cart">加入购物车</string>
    <string name="now_buy">立即购买</string>
    <string name="pay_type">支付方式</string>
    <string name="pay_on_delivery">货到付款</string>
    <string name="pay_on_delivery_brief">送货上门后付款，支持现金、刷卡</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_online_brief">支持银联卡及第三方支付平台</string>
    <string name="pay_confirm">确认支付</string>
    <string name="pay_in_cash">现金支付</string>
    <string name="pay_in_pos">POS机刷卡</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="unionpay">银联</string>
    <string name="pay_suc">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_way_hint">请选择支付方式</string>
    <string name="pre_pay_hint">因您购买的酒超过12瓶，需预先支付30%的金额</string>
    <string name="pre_pay_set_way_fail">预支付支付方式设置失败</string>
    <string name="prompt">提示</string>
    <string name="cancal">取消</string>
    <string name="buy">购买</string>
    <string name="entryTitle">接入方式选择</string>
    <string name="apk">apk接入</string>
    <string name="jar">jar接入</string>
    <string name="payBYAPK">APK接入</string>
    <string name="payBYJAR">JAR接入</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="order_list">订单列表</string>
    <string name="order_state">订单状态</string>
    <string name="delivery">配送</string>
    <string name="take_goods">收货</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_continue_pay">继续支付</string>
    <string name="order_view">查看订单</string>
    <string name="order_del">删除订单</string>
    <string name="add_comment">追加评论</string>
    <string name="query">查询</string>
    <string name="place_order_suc">下单成功</string>
    <string name="began_delivery">开始配送</string>
    <string name="confirm_goods">确认收货</string>
    <string name="identification_goods">商品鉴别</string>
    <string name="thanks_for_qr">感谢使用酒来了提供酒水</string>
    <string name="qr_result_suc">产品鉴定匹配成功</string>
    <string name="qr_result_fail">产品鉴定匹配失败，没有找到商品</string>
    <string name="qr_go_on">继续扫码</string>
    <string name="order_comment">订单评价</string>
    <string name="identification_qr">扫码鉴定</string>
    <string name="order_cancel_suc">订单取消成功</string>
    <string name="order_cancel_fail">订单取消失败</string>
    <string name="order_cancel_confirm">确定取消订单？</string>
    <string name="order_cancel_no">订单已经配送，不能取消！</string>
    <string name="cart_no_hint">有好多美酒等着亲来选购哟</string>
    <string name="comments">服务评价</string>
    <string name="comments_please">请为我们的服务打分</string>
    <string name="comments_very_good">非常满意</string>
    <string name="comments_good">基本满意</string>
    <string name="comments_not_good">不满意</string>
    <string name="thanks_for_comments">感谢您的评价</string>
    <string name="thanks_comments">感谢评价</string>
    <string name="comments_result_suc">您已经获得100积分</string>
    <string name="info_input">信息录入</string>
    <string name="mobile_phone">手机</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="replace_phone">更换手机号</string>
    <string name="address">地址</string>
    <string name="dev_address">配送地址</string>
    <string name="dev_person">收货人</string>
    <string name="dev_address_history">历史配送地址</string>
    <string name="invoice_history">历史发票抬头</string>
    <string name="street">街道</string>
    <string name="detail_info">详细信息</string>
    <string name="distribution_date">配送日期</string>
    <string name="distribution_time">配送时间</string>
    <string name="invoice">发票开具</string>
    <string name="invoice_title">发票抬头</string>
    <string name="invoice_content">发票内容</string>
    <string name="alternative_person">代收人</string>
    <string name="alternative_person_hint">请填写代收人信息</string>
    <string name="alternative_person_name_hint">请填写代收人姓名</string>
    <string name="alternative_person_phone_hint">请填写代收人姓名</string>
    <string name="wine">酒</string>
    <string name="food">食品</string>
    <string name="select_invoice_content">请选择发票内容</string>
    <string name="submit">提交</string>
    <string name="agreement_hint">点击上方提交按钮即表示您同意</string>
    <string name="delivery_address_hint">配送范围:目前酒来了已开通配送区域为南京市主城区(鼓楼、白下、建邺、秦淮、下关、雨花、玄武、江宁),其他区域将陆续开通！</string>
    <string name="delivery_time_hint">配送时间:09:00 -- 21:00</string>
    <string name="agreement">《酒来了软件许可及服务协议》</string>
    <string name="integral_mall_go_to">逛逛积分商城</string>
</resources>