<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_title_bg" >

        <ImageView
            android:id="@+id/comments_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="8dip"
            android:src="@drawable/back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/comments"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/comments_please"
        android:textColor="@color/black_character"
        android:textSize="@dimen/medium_text_size" />

    <LinearLayout
        android:id="@+id/comments_very_good_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/comments_very_good"
            android:textColor="@color/black_character"
            android:textSize="@dimen/middle_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comments_good_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/comments_good"
            android:textColor="@color/black_character"
            android:textSize="@dimen/middle_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comments_not_good_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dip"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_not_good"
            android:textColor="@color/black_character"
            android:textSize="@dimen/middle_text_size" />
    </LinearLayout>

</LinearLayout>