<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_title_bg" >

        <ImageView
            android:id="@+id/qr_result_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="8dip"
            android:src="@drawable/back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/identification_qr"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dip"
        android:paddingTop="10dip" >

        <ImageView
            android:id="@+id/qr_result_ok_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="8dip"
            android:src="@drawable/qr_ok" />

        <TextView
            android:id="@+id/qr_result_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dip"
            android:text="@string/qr_result_suc"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dip"
            android:text="@string/thanks_for_qr"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_result_go_on_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/qr_go_on"
            android:textColor="@color/red_title_bg"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_result_order_search_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="5dip"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/order_search"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_result_order_comment_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/common_selector"
        android:gravity="center"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_comment"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

</LinearLayout>