<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_title_bg" >

        <ImageView
            android:id="@+id/pay_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="8dip"
            android:src="@drawable/back_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pay_type"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_on_delivery"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/middle_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_on_delivery_brief"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_cash_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:padding="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_in_cash"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />

        <CheckBox
            android:id="@+id/pay_cash_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@null"
            android:button="@drawable/check_selector"
            android:focusable="false"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:background="@drawable/h_line"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_pos_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_in_pos"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />

        <CheckBox
            android:id="@+id/pay_pos_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:background="@null"
            android:button="@drawable/check_selector"
            android:focusable="false"
            android:gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_online"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/middle_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/pay_online_brief"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/small_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_alipay_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@color/white"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/pay_alipay_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/alipay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/pay_alipay_iv"
            android:text="@string/alipay"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:background="@drawable/h_line"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_wechat_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/pay_wechat_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/wechat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/pay_wechat_iv"
            android:text="@string/wechat"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:background="@drawable/h_line"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/pay_unionpay_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/pay_unionpay_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:src="@drawable/card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/pay_unionpay_iv"
            android:text="@string/unionpay"
            android:textColor="@color/black_character"
            android:textSize="@dimen/medium_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/arrow_right" />
    </RelativeLayout>

</LinearLayout>